--- a/web-scraping.ipynb
+++ b/web-scraping.ipynb
@@ -7,7 +7,8 @@
     "## Web Scraping\n",
     "### I am doing web scraping in orfer to get info about the NBA stats. The tables I need to scrape are \n",
     "### 1- the most important player table\n",
-    "### 2- all player stats table"
+    "### 2- all player stats table\n",
+    "### 3- team data tables"
    ]
   },
   {
